--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,73 +1,102 @@
-<%= render "shared/header" %>
-<br>
-<br>
-<div class="border col-7 container">
-  <h2>ようこそ！新規登録をしよう！</h2>
+<!doctype html>
+<html>
+  <head>
+    <script src="https://kit.fontawesome.com/81c73138ec.js" crossorigin="anonymous"></script>
+    <style type="text/css">
+      body {
+        background:#63b47a;
+      }
+      .border{
+        box-shadow: 45px 45px 0px rgba(0, 0, 0, .1);
+      }
+      i {
+        font-size: 40pt;
+        min-width: 40px;
+        margin: 0px 25px;
+        vertical-align: bottom;
+      }
+      .form-control {
+        background:#f5f5f5;
+        border:1px solid #eee;
+      }
+      .btn {
+        box-shadow: 0px 7px 0px rgba(16, 86, 39);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container border rounded my-5 py-3 col-md-5 bg-white">
+      <a type="button" onclick="history.back()"><i class="fas fa-arrow-left"></i></a>
+      <br>
+      <h2 class="text-center"><i class="fas fa-piggy-bank"></i>食べたつもり貯金</h2>
+      <br>
 
-  <%= form_with model: @user, url: user_registration_path, method: :post, local: true do |f| %>
-    <div class="row align-items-center justify-content-center">
-      <div class="col-mdd-flex">
-        <%= render "devise/shared/error_messages", model: f.object %>
+      <%# Brand SignUP %>
+      <%= render 'devise/shared/icon' %>
 
-        <div class="form-group">
-          <%= f.label :"苗字" %><br />
-          <%= f.text_field :family_name, autofocus: true, class:"form-control", placeholder:"田中" %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :"名前" %><br />
-          <%= f.text_field :given_name, class:"form-control", placeholder:"太郎" %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :"メールアドレス" %><br />
-          <%= f.email_field :email, class:"form-control", placeholder:"aaa@gmail.com" %>
-        </div>
-
-        <%if @sns_id.present? %>
-          <%= hidden_field_tag :sns_auth, true %>
-        <% else %>
-          <div class="form-group">
-            <%= f.label :"パスワード" %>
-            <em>(8 characters minimum)</em>
-            <%= f.password_field :password, class:"form-control" %>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :"確認のためにもう一度パスワードを入力してください" %><br />
-            <%= f.password_field :password_confirmation, class:"form-control" %>
-          </div>
-        <% end %>
-
-        <div class="form-group">
-          <%= f.label :"ニックネーム" %><br />
-          <%= f.text_field :nickname, class:"form-control" %>
-        </div>
-
-        <div class="form-group">
-          <label class="form-text">生年月日</label>
-          <span class="indispensable">必須</span>
-        </div>
-        <div class='input-birth-wrap'>
-          <%= raw sprintf(
-                      f.date_select(
-                        :birth_day,
-                        class:'select-birth',
-                        id:"birth-date",
-                        use_month_numbers: true,
-                        prompt:'--',
-                        start_year: 1930,
-                        end_year: (Time.now.year - 5),
-                        date_separator: '%s'),
-                      "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
-        </div>
-
-        <div class="container">
-          <%= f.submit "Sign in", class:"btn btn-success btn-lg rounded-pill" %>
-        </div>
+      <div class="d-flex flex-row justify-content-center mt-4">
+        <div class="text-muted">------------------------------------------</div>
+        <div class="h5 text-muted">OR</div>
+        <div class="text-muted">------------------------------------------</div>
       </div>
+
+      <%= form_with model: @user, url: user_registration_path, method: :post, local: true do |f| %>
+        <div class="row">
+          <%= render "devise/shared/error_messages", model: f.object %>
+
+          <div class="form-group col-md-6 mt-4">
+            <%= f.text_field :family_name, autofocus: true, class:"form-control p-3", placeholder:"苗字" %>
+          </div>
+
+          <div class="form-group col-md-6 mt-4">
+            <%= f.text_field :given_name, class:"form-control p-3", placeholder:"名前" %>
+          </div>
+
+          <div class="form-group mt-4">
+            <%= f.email_field :email, class:"form-control p-3", placeholder:"メールアドレス" %>
+          </div>
+
+          <%if @sns_id.present? %>
+            <%= hidden_field_tag :sns_auth, true %>
+          <% else %>
+            <div class="form-group mt-4">
+              <%= f.password_field :password, class:"form-control", placeholder:"8桁以上のパスワード" %>
+            </div>
+
+            <div class="form-group mt-4">
+              <%= f.password_field :password_confirmation, class:"form-control", placeholder:"確認のためにもう一度パスワードを入力してください" %>
+            </div>
+          <% end %>
+
+          <div class="form-group mt-4">
+            <%= f.text_field :nickname, class:"form-control p-3", placeholder:"ニックネーム" %>
+          </div>
+
+          <div class="form-group mt-4">
+            <label class="form-label">生年月日</label>
+          </div>
+          <div>
+            <%= raw sprintf(
+                        f.date_select(
+                          :birth_day,
+                          class:'form-control',
+                          use_month_numbers: true,
+                          prompt:'--',
+                          start_year: 1930,
+                          end_year: (Time.now.year - 5),
+                          date_separator: '%s'),
+                        "年", "月") + "日" %>
+          </div>
+
+          <div class="d-flex flex-row justify-content-center mt-4">
+            <%# <% if f.nil? %>
+              <%= f.submit "Sign in", class:"btn btn-success w-100 p-4" %>
+            <%# <% else %>
+              <%# <a href="#" class="btn btn-success disabled w-100" tabindex="-1" aria-disabled="true" role="button" data-bs-toggle="button">フォームを入力してください</a>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
     </div>
-  <% end %>
-  <%= link_to "Facebookで登録", user_facebook_omniauth_authorize_path, method: :post%>
-  <%= link_to "Googleで登録", user_google_oauth2_omniauth_authorize_path, method: :post%>
-</div>
+  </body>
+</html>
