--- a/app/views/money/index.html.erb
+++ b/app/views/money/index.html.erb
@@ -113,6 +113,7 @@
                 <div class="btn-toolbar mb-2 mb-md-0">
                   <div>
                     <%= link_to '変更する', goal_path(goal.id), class: "btn" %>
+                    <%= link_to 'delete', goal_path(goal.id), method: :delete, class:"btn btn-primary btn-lg rounded-pill float-right" %>
                   </div>
                 </div>
               </div>
