--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,13 +1,27 @@
-<nav class="navbar navbar-expand-lg navbar-light justify-content-md-between py-3 shadow">
-    <a href="/money" class="navbar-brand fs-3">食べたつもり貯金</a>
+<head>
+  <script src="https://kit.fontawesome.com/81c73138ec.js" crossorigin="anonymous"></script>
+  <style type="text/css">
+    /* Pig icon */
+    i {
+      font-size: 40pt;
+      min-width: 40px;
+      margin: 0px 25px;
+      vertical-align: bottom;
+    }
+  </style>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light justify-content-md-between py-3 shadow">
+    <a href="/money" class="navbar-brand fs-3"><i class="fas fa-piggy-bank"></i>食べたつもり貯金</a>
 
-    <div class='d-flex flex-row'>
-      <% if user_signed_in? %>
-        <%= link_to "#{current_user.given_name}さん", "#", class: "btn btn-outline-success me-2" %>
-        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-success" %>
-      <% else %>
-        <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success me-2" %>
-        <%= link_to '新規登録', new_user_registration_path, class: "btn btn-success" %>
-      <% end %>
-    </div>
-</nav>
+      <div class='d-flex flex-row'>
+        <% if user_signed_in? %>
+          <%= link_to "#{current_user.given_name}さん", "#", class: "btn btn-outline-success me-2" %>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-success" %>
+        <% else %>
+          <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success me-2" %>
+          <%= link_to '新規登録', new_user_registration_path, class: "btn btn-success" %>
+        <% end %>
+      </div>
+  </nav>
+</body>
