--- a/app/views/money/lp.html.erb
+++ b/app/views/money/lp.html.erb
@@ -1,11 +1,13 @@
 <!doctype html>
-<html lang="ja" >
+<html lang="ja">
   <head>
     <title>First Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="carousel.css" rel="stylesheet">
     <link href="../example.css" rel="stylesheet">
+    <style type="text/css">
+    </style>
   </head>
   <body>
     <%# header %>
@@ -13,11 +15,9 @@
 
     <%# headerline %>
     <div class="container-fluid">
-      <div class="row">
-        <div class=" position-relative" style="height: 600px;">
-          <%= image_tag "colorful_money.jpg", class:"img-fluid h-100 w-100", alt:"Generic placeholder image" %>
-        </div>
-        <div class="p-lg-6 my-5 col-md-6 mx-auto position-absolute top-50 start-50 translate-middle">
+      <div class="headerline row bg-warning">
+          <%# <%= image_tag "colorful_money.jpg", class:"img-fluid h-100 w-100", alt:"Generic placeholder image" %> %>
+        <div class="p-lg-6 my-5 col-md-6 mx-auto translate-middle">
           <h1 class="h1 text-white">貯金アプリでダイエットはじめませんか？</h1>
           <a class="btn btn-outline-secondary" href="#">今すぐ始める</a>
         </div>
