--- a/app/views/money/lp.html.erb
+++ b/app/views/money/lp.html.erb
@@ -10,16 +10,16 @@
     </style>
   </head>
   <body>
-    <%# header %>
-    <%= render 'shared/header' %>
-
     <%# headerline %>
     <div class="container-fluid">
-      <div class="headerline row bg-warning">
-          <%# <%= image_tag "colorful_money.jpg", class:"img-fluid h-100 w-100", alt:"Generic placeholder image" %> %>
-        <div class="p-lg-6 my-5 col-md-6 mx-auto translate-middle">
-          <h1 class="h1 text-white">貯金アプリでダイエットはじめませんか？</h1>
-          <a class="btn btn-outline-secondary" href="#">今すぐ始める</a>
+      <div class="row">
+        <div class="headerline bg-success">
+            <%# <%= image_tag "colorful_money.jpg", class:"img-fluid h-100 w-100", alt:"Generic placeholder image" %> %>
+          <div class="my-auto bg-warning">
+            <h1 class="h1 text-white">食べたつもり貯金</h1>
+            <h1 class="h2 text-white">ずっと欲しかった物・物のために貯金アプリでダイエットはじめませんか？</h1>
+            <a class="btn btn-outline-secondary" href="#">今すぐ始める</a>
+          </div>
         </div>
       </div>
 
