--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,7 @@
 <head>
   <script src="https://kit.fontawesome.com/81c73138ec.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
   <style type="text/css">
     /* Pig icon */
     i {
@@ -8,11 +10,15 @@
       margin: 0px 25px;
       vertical-align: bottom;
     }
+    .navbar-brand {
+      font-family: 'Dela Gothic One', cursive;
+      font-size: 45px;
+    }
   </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light justify-content-md-between py-3 shadow">
-    <a href="/money" class="navbar-brand fs-3"><i class="fas fa-piggy-bank"></i>食べたつもり貯金</a>
+    <a href="/money" class="navbar-brand"><i class="fas fa-piggy-bank"></i>食べたつもり貯金</a>
 
       <div class='d-flex flex-row'>
         <% if user_signed_in? %>
