dayからdateへ修正

--- a/app/views/money/show.html.erb
+++ b/app/views/money/show.html.erb
@@ -13,7 +13,7 @@
       <table class="table table-hover">
         <thead class="bg-light">
           <tr>
-            <th scope="col">DAY</th>
+            <th scope="col">DATE</th>
             <th scope="col">金額</th>
             <th scope="col">一言</th>
             <th scope="col">削除</th>
