--- a/app/views/bodies/show.html.erb
+++ b/app/views/bodies/show.html.erb
@@ -19,7 +19,7 @@
       <table class="table table-hover">
         <thead class="bg-light">
           <tr>
-            <th scope="col">DAY</th>
+            <th scope="col">DATE</th>
             <th scope="col">体重</th>
             <th scope="col">削除</th>
           </tr>
