--- a/app/views/goals/_goalform.html.erb
+++ b/app/views/goals/_goalform.html.erb
@@ -3,9 +3,6 @@
   <head>
     <script src="https://kit.fontawesome.com/81c73138ec.js" crossorigin="anonymous"></script>
     <style type="text/css">
-      body {
-        background:#63b47a;
-      }
       .border{
         box-shadow: 45px 45px 0px rgba(0, 0, 0, .1);
       }
@@ -24,7 +21,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="bg-warning">
     <div class="container border rounded my-5 py-3 col-md-5 bg-white">
       <a type="button" onclick="history.back()"><i class="fas fa-arrow-left"></i></a>
       <br>
