--- a/app/views/money/index.html.erb
+++ b/app/views/money/index.html.erb
@@ -4,12 +4,14 @@
     <title>ダッシュボードテンプレート for Bootstrap · Bootstrap</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-    <link href="dashboard.css" rel="stylesheet">
-    <link href="../example.css" rel="stylesheet">
+    <%# <link href="dashboard.css" rel="stylesheet">
+    <link href="../example.css" rel="stylesheet"> %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@900&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <style type="text/css">
       a, a:visited, a:focus, a:hover {
         text-decoration: none;
@@ -19,7 +21,7 @@
         background-image: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
       }
       /* Chart.js */
-      @-webkit-keyframes chartjs-render-animation {
+      /* @-webkit-keyframes chartjs-render-animation {
         from{opacity:0.99}to{opacity:1}
       }
       @keyframes chartjs-render-animation {
@@ -27,7 +29,7 @@
       }
       .chartjs-render-monitor {
         -webkit-animation:chartjs-render-animation 0.001s;animation:chartjs-render-animation 0.001s;
-      }
+      } */
       /* sidebar */
       .nav-link {
         color: black;
@@ -35,21 +37,38 @@
       .nav-link:hover {
         color: #F9C80E;
       }
-      /* goal 見出し */
-      .ribbon-text {
-        color: #5c8584;
+      /* welcome 見出し */
+      .welcome-top {
+        position: absolute;
+      }
+      .goal-image {
+        /* opacity: 0.8; */
+      }
+      .welcome-pulldown {
+        position: relative;
+        top: 300px;
+        left: 300px;
+        width: 70vw;
+        background-color: rgba( 255, 255, 255, 0.55 );
+      }
+      .welcome-text {
         font-size: 70px;
-        font-weight: 900;
-        letter-spacing: .1em;
+        font-weight: 700;
+        color: #ACB6E5;
+        background: -webkit-linear-gradient(0deg, #40E0D0, #FF8C00, #FF0080);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+      .welcome-text-mini {
+        font-size: 30px;
       }
       /* goal startbtn */
       .start-btn {
         position: relative;
-        background-color: #ceb849;
         border: 1px solid transparent;
         border-radius: 35px;
-        width: 350px;
-        font-size: 70px;
+        width: 150px;
+        font-size: 35px;
       }
       .start-btn :before {
         content: '';
@@ -160,15 +179,30 @@
       .box-p4 {
         font-size: 50px;
       }
+
     </style>
   </head>
   <body>
+    <% unless @goal.present? %> 
+      <div class="welcome-top">
+        <%= image_tag "yback.jpg", class:"goal-image img-fluid" %>
+      </div>
+      <div class="text-center">
+        <div class="welcome-pulldown row p-5">
+          <span class="welcome-text">Welcome!<%= "#{current_user.nickname}さん" %></span>
+          <h2 class="welcome-text-mini d-block my-3">ユーザー新規登録が完了しました！</h2>
+          <h2 class="welcome-text-mini d-block mt-3 mb-5">次に目標を立てましょう！目標は何度でも変更できます</h2>
+          <div class="start-btn mx-auto btn-success"><%= link_to 'START', new_goal_path, class:"btn h3" %></div>
+        </div>
+      </div>
+    <% end %>
+    <% if @goal.present? %>
 
-    <%# header %>
-    <%= render 'shared/header' %>
+      <%# header %>
+      <%= render 'shared/header' %>
 
-    <div class="container-fluid">
-      <div class="row">
+      <div class="container-fluid">
+        <div class="row">
         <%# sidebar %>
         <aside class="main-sidebar col-md-3 col-lg-2 px-20 border-end">
           <div class="nav-wrapper">
@@ -210,20 +244,7 @@
         <%# main-content %>
         <main class="main-content col-lg-10 col-md-9 col-sm-12">
           <div class="main-content-container container-fluid py-5 px-3">
-            <% unless @goal.present? %> 
-              <div class="row">
-                <div class="text-center">
-                  <span class="ribbon-text">Welcome!<%= "#{current_user.nickname}さん" %></span>
-                  <%= image_tag "goal_index.jpg", class:"goal-image rounded-circle mb-5", width:"700" %>
-                  <h2 class="d-block my-3">ユーザー新規登録が完了！</h2>
-                  <h2 class="d-block mt-3 mb-5">次に目標を立てよう！目標は何度でも変更できるよ</h2>
-                  <i class="start-btn px-3 py-1 fas fa-play-circle"><%= link_to 'START', new_goal_path, class:"btn" %></i>
-                </div>
-              </div>
-            <% end %> 
-
             <div class="row">
-            <% if @goal.present? %>
             <% @goal.each do |goal| %>
               <div class="col-12 d-flex">
                 <div class="goal-wrap">
@@ -304,12 +325,12 @@
                 </div>
               </div>
             <% end %>
-            <% end %>
             </div>
           </div>
         </main>
+        </div>
       </div>
-    </div>
+    <% end %>
 
     <!-- Icons -->
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
@@ -318,7 +339,7 @@
     </script>
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <%# <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script>
       window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery-slim.min.js"><\/script>')
     </script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script><script src="/docs/4.4/assets/js/vendor/anchor.min.js"></script>
@@ -326,6 +347,6 @@
     <script src="/docs/4.4/assets/js/vendor/bs-custom-file-input.min.js"></script>
     <script src="/docs/4.4/assets/js/src/application.js"></script>
     <script src="/docs/4.4/assets/js/src/search.js"></script>
-    <script src="/docs/4.4/assets/js/src/ie-emulation-modes-warning.js"></script>
+    <script src="/docs/4.4/assets/js/src/ie-emulation-modes-warning.js"></script> %>
   </body>
 </html>
